Создан новый компонент ReviewsPageV2 с современным дизайном и анимациями

--- a/src/pages/ReviewsPage.css
+++ b/src/pages/ReviewsPage.css
@@ -1,4 +1,4 @@
-/* Основные стили для страницы отзывов */
+/* Основные стили для страницы отзывов - версия 2.0 */
 .reviews-bg {
   min-height: 100vh;
   width: 100vw;
